# LCT_hackaton

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 0001_init.py  0002_email_and_widgets.py  0003_ml_enrichment.py  0004_timescale_pgvector.py
app/: celery_app.py  main.py
app/api/: dependencies.py
app/core/: config.py  security.py
app/db/: functions.py  session.py  types.py
app/models/: __init__.py  review.py  user.py  widget.py
app/realtime/: __init__.py  dashboard.py  events.py  pubsub.py
app/schemas/: parser.py  review.py  user.py  widget.py
app/services/: auth.py  clustering.py  embeddings.py  ml.py  openai_client.py  pipeline.py  review_parser.py  reviews.py  widgets.py
app/static/: dashboard.js  styles.css
app/tasks/: __init__.py  import_reviews.py  sentiment.py
app/templates/: base.html  dashboard.html  login.html  register.html
app/web/: __init__.py  routes.py
classification_model/: README.md  api.py  baseline.ipynb  bert_train.ipynb  df_gb.csv  requirements.txt
dashboard_builder/: README.md  requirements.txt
dashboard_builder/src/: api.py  dashboard_builder.py
dashboard_builder_agent/: .gitignore  Dockerfile
dashboard_builder_agent/src/: api.py  dashboard_builder.py
data/: gazprombank_reviews.csv
data/prompts/: build_md_report.md
frontend/: package-lock.json  package.json
report_agent/: Dockerfile  docker-compose.yml
src/: report_agent.py
tests/: conftest.py  test_reviews.py  test_widgets.py
(+32 files in other folders)
