[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-analytics-service"
version = "0.1.0"
description = "MVP backend for analyzing banking product reviews."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "LCT Hackathon Team"}]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "celery>=5.3.6",
    "redis>=5.0.4",
    "textblob>=0.17.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "openai>=1.40.0",
    "pytest>=8.2.1",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "pgvector>=0.3.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
